--- a/Fontes/SisLoja/SisLoja/UI/fCadEntrada.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fCadEntrada.resx
@@ -1,4 +1,64 @@
-﻿<root>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!--
+    Microsoft ResX Schema 
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -1449,7 +1509,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAo1JREFUWEftV72L1EAUD4iKH/iNohzKbZJd2UKQ8x9QUA6TGc8iaKkWAU+8ncmq
+        DwAACw8BkvkDpQAAAo1JREFUWEftV72L1EAUD4iKH/iNohzKbZJd2UKQ8x9QUA6TGc8iaKkWAU+8ncmq
         d4Xg2aiFWgs2VhZWgqCIhYUgIiuKIAhyjYVYWamo+PV7s5O9ZDPZC4FdV7gHP3bex7z3y5uPZK08cXx5
         22XyTxKwHXd440R7LL47E2dsU1zVjyKdprwg8aPuxA6T04RYt73mmCkOuKzTlJfhJTB+emTnxKmNricq
         I4FcMVACri/uOVw04HsGMvddFh2D7X0mrm8ECgIb9JJOU15yCDyEfdJlIuyFKmuO6jTlJUPAlx937W+u
@@ -1466,7 +1526,7 @@
   <data name="kbtnPesquisa.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAaBJREFUSEvFlcsrRGEYh8dMobBUNmIhYT9qFhZircjKwoIaFBv5A9wvsUNZ+A80
+        DgAACw4BQL7hQQAAAaBJREFUSEvFlcsrRGEYh8dMobBUNmIhYT9qFhZircjKwoIaFBv5A9wvsUNZ+A80
         pcbGRtmws7KTbGShJuWe2+d5fe+cJmfOnG80eOop/d7f+81xzlwi/4oxph6HcBrncAxbdPxzOKQN9/AD
         83GMHVovDhb78UFOgSvcxHFM4iqeofCGU7rmBgvd+IrvOIOVOvIgi+EIPqGQ1FFhKFahXLEQukQnezHP
         2KBxMJQmUUhpFArdZbtitjQKhtKR7ZqERqHQrUV5FtcY09gPwzKUe3qHUY2doH+CQqNGfhjW2I4518gZ
