--- a/Fontes/SisLoja/SisLoja/UI/fVendas.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fVendas.resx
@@ -117,6 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="kbnFinalizar.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAVlJREFUSEvVlL1Kw2AYRqPg3+SkgroICgoOgoM6CuoNFIpX4CgOvQEnFxdBB3Fx
+        8QYEV4vo2DsQHVx0FVwUNJ43eRKSNskX8BP0wIH2/Xm+JqEJfp0wDPtwG3ewgYNq+YHAGfzChCu1/EHo
+        HC7jmZ0AC2r5heCVOD9sqeQXgvvxBdsq+Yfwc/zA0x94jFOKzEOjiT5oKDIPjVG0K3BxgvN4H33L84lj
+        iuyF5nU0Vs0djuA0dh/SUVQxDLTiuZRn3EX7M2Zd0rwd8oQJB1FQGQzYpWe5xWG1e6Bnb4O2DYp1tcph
+        qOjeZnnFVbTwIyuINxxSTDkMZZeK2MfucKPeq4bBrXi+FHsuN/HHHHuKqIbBAXyMVupjt2dSEW4YnsUL
+        7NTwEte0+ofgVy3iIW6qlMPVd8Ji8hzecULlFGqVfScsPUTrccC4yinUKvtOWEpuwYZKOVz9/04QfANt
+        Aj86kGolEQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="kbnFinalizar.Values.ImageStates.ImageDisabled" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAYtJREFUSEvVlL1Kw1AYhlvBv8lJBXURImiRJG2aJk5FUG9AEK+gozh4A04uLoIO
+        4uLiDQiuFtGxdyA6uOgqdFHw5zn1azhJ055Cg+gDL4fz/bwnJ+ckud8gXy6Xt0ulUo1xs1AojEg8GyqV
+        yrzneZ/oS4mFriSVHa7rLmCMv3emFikWi0uSyhbMA9nFnoQyZwjzF1SXefawg3P0jk4H0LHjOLNiGYen
+        36KgdeCDSN1IsYxDcgKpHaQ2ajpBi+hei7X1wcWZFMtOKLhONHSInd6FYTjONZ9jnlykIVbpqFukNzB/
+        ZtxhrOnyfd9V9WoR5k9az0HLqBsUqK1HC6DbarU6Juk08ixQ1+pXJd4ditLebSQMX1FIaZ75kZZrWpY1
+        +uPSg0RTmvYpS5r3/6uheENvTAojdS43KfFdsegNxcMUPyYNDGryH5sRCzMUWzRdoEYfuqR+RVr/EHzy
+        yzzdIVqXUAxT3oh2Dm9BEExLOMKUN4LBQ9vAtu0pCUeY8kbar4BxTUIxTPn/Ti73DePvJDztgcR7AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="kbnTipoPagamento.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAXtJREFUSEvt1L8rRWEcx/FzDTcyEYMfxcAiSRGTDDaZlAExYzEKWZhkMCiSlB/L
+        ZZCQRQwGi/wBfoUFycatS7nH+/v44uocHvcw3OF+6lXneb7P83065557nHRSP67rVmAOq0kaRba2+RoK
+        YQxgAXcImjVt+Rkm87CPFYzhBjsBxbTtW5howCWGEUIrlrWcdNgbfb/IgDSV5o1mknAtB8jdtAUUkybF
+        2MMW8rW3CWM54E+RJhfoQ0j7foQ5vwNesItDM7JEmoS1nyfUEg94wCTKtFYpk7aYRn6hlott3GIIOVoy
+        YTwIa3S5N9QK0Y1MnTJhXIBpxGFLXLfZw+IizOBRdv4yR7r957CwFKeQ30Ee2TmecYVrRHUu0TrKtcX3
+        YVEd5E3rgrzKTTp/jyz0YMos9gvFGrSgA72Qb9A4FnGAJ0TQDrkDOVAay6OSP9MZ6rWdNxSXIF+/WUxg
+        BP3oRC1KILe7iXkc4wQbkO9Vs7b6n9CwGlU6TCfl4zivWhOJdIdTCr8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="kbnDesconto.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAdxJREFUSEvNlU0rRFEYxwdlp0iMxeBDzNQg5eUzWFnZKd/BsLVTY5QsLHwCySzI
+        hvIybJS1EjaKwhKN3//c5447d47pTlJ+9at5nnOe576cc+6k/hXVanVEWvg7aNSOaQsVZ/HdzFla+TS2
+        W5gcitZRlLGA9y4K0G/lNCZKVpYcis6D2kScWVkyKBjEV1eaDM3NWLkfJuid67Vc4hu2ii6i2jVsXBOS
+        A+hjHzfwzkUBz3iAVy5qpN/a1sNAuGghq5bvxj58UhLmsAOPXVRP2TXzweBSMKfGBI7hqY3vYAX1OpfR
+        R8E1i8NADh/clG9mUXc+b3MucBTH8QN9aAvXzomDhIp0gOLc4BQOo55uG3vwFpuhXnlr7y6gT4DvAlF0
+        Z724hTpkQziJuok49RcQJPSKoqc1yidOo+ZUbP4C6jOh1xhFuy3rmsZhIL7IISs2foS79vsE9eR6iij+
+        RRYMxrep0OHpxBkXBWdAd95lNUUlI+y5ZnEY+OmgXaMO1aOLArTbNvHQRY00HjSS2ts65rrjVr5DIS+o
+        Wj1Rm7X1w4QMtnIRNW/+sYtDwd99rgVFpaC2uoeLGN3C2orKhZuiaGXJoUhrUlssfkf/Mmv7XHOw9b9M
+        HzTKSwv/A6nUF9MEwq836sYQAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="kbtnCliente.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAWFJREFUSEutlk8rRGEUhy8STVMKs5KVNP6UvZUSH0AKO7MQW8pCbJRvwFIpH8Bm
+        siKslIVkZWNhoRQLpSwkup73nlNq7p37du47Tz2b857fr+7MvTM38hHH8Rie4As+4QGW9TgMiibwExt5
+        xTuc0tViUHDt2nJ4w5Ku2yBYTSr8zGnEBsGa5L1sa8QGwXXJe9nTiA2CS5L3sqIRGwQnJe9lQSM2CK5J
+        3suORmwQnJa8l3mN2CDYjqdJRXMusUMjdgj34bdrasKIrhaHkiPpSlHXlTAoqmDWVYzqShgUDeNPUvnP
+        L1Z1xQ7hMi7iMb5jFu6qLnATBzWaD4tduIHuV9LCF+5jRavScNiPtxjCM2Z/dBzUk5Vw7rFNawUG3ei+
+        uFYxoNUCgx6Zt4whrRYYdOJHchTOI6b/RhnO4IPbKMgNrmL+GwcL47iMu+iegzM8R3eHOa/QvcYc4hbO
+        Yq/GG4iiP6Zjmw2el+T3AAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="Imagem.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -126,7 +190,9 @@
   <metadata name="Valor.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <metadata name="kryptonCustomPaletteBase1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="pbImg.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAyAAAAPYCAYAAAAisZ0cAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -812,4 +878,7 @@
         AAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
