--- a/Fontes/SisLoja/SisLoja/UI/fVendas.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fVendas.resx
@@ -181,15 +181,49 @@
         Yq/GG4iiP6Zjmw2el+T3AAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="Imagem.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="pbUnlock.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAddJREFUSEvNlUsvA1EUxwchJAgbgnrVTEm3PoCt6B1lMVsrKoj2jqbYTcMeIYQF
+        PgNdWVl4fQMhiKUPIBEhHv/bnkmm82inNOKXnLRz5pzfPb132kr/mrBm1NDb8qMwfUVh/ENR9VN5eL6R
+        0uVBVvkqxF+WuCzbItnJ8+W5YPyifzTVQGU/A6K0Q2yN3yyCbVl0ldpCZvp5WJutpzZ/YFtSbjKvwDBn
+        vheRGV92kxQNxjOk8EZsCz7ys6ugSKDvTdK0KlI5QVFSVvXrgXHepqh82y7wEWlSOYGYY/pbPBHtlBK5
+        JReJV6xRmxMcaNwuNxH30Pxpk+UH4+tU7kSJ6FNCjtcOSjnAvQnUvLvL9Q0qcxJifLKY3CTEEmMQvlrl
+        ONQ93KrIVdiAdAQf7b4vutBJqaJQz0tOzreQcpcLUGBggk269EVA0+uwwBViB5feckFwPNmCBW6wTXOU
+        Kkj3kFGLyU+wpbu4LCw36VXjreK5x0KzlHJF/Mlg6gwOdF8yjEpK+wO/6QE038nqwgyl8sjKVf0YX7yD
+        kuUm5iKYcJpSWWjyI5zX4Y/lJkEW74LsHlv2YAamfqLH8dGat4bo6Y8mekhTmMFYrLorstxcSnRHE03U
+        /ldI0jeeQV+Ib0kRMwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="img.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Nome.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="nome.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Valor.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="qtd.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="precovenda.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="acao.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="acao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAfZJREFUSEvdlLlOw0AQhiOuF4lDQcsD0AFS7HCI8Ai0WfMCKUm4KakJ17sQ0XGE
+        owRaBDXw/+M/2HEc5Eg08EmWvf/uzM7OzLrwv5mq1ieKgVv1/PAEz40XuHd7+A2Nc1yj5cNRCmrLXhA+
+        lILwsxS4Z893p3C+Yw++qdmc7+5L5XBJZjmo10fgZFOOL+BslppmY6AVy7U5rGtHG4XNzHVpEPUWDZCC
+        w5mZ+pjkwVSrozhFQ6dpSM2GaYkiD3cl5QbO92g76dcWJfXCYkU5dxeMSnJ+eBKmy3d302tr41Jj2BGM
+        wHKeAPW4tfymUJ06GhqqyadXdiuSYtSKT+lCdWvCFEj6TgfnJEXAFsG8YK4lJYaRsv007KHr0N6Jb033
+        gA3OeU80jIH41hdRAjjdMMc/OCcIcpu+NIyxDTCpYR+5N8BFxJpXDWNypQjtq2f4FKE9j3n9f6XIvjuS
+        EtNtU7aaJAOnesyqDTXOaWgUg3DeNs5qU1407HyPBe1cv4gUtMGml7DvZF40wr8iI8Ax9yXlBjU8gO1H
+        sbJekZQNFtqfFIU6HBhJkuTPDp0m9QeiQjVl0LaapApvQGPOlZYPbpK5bhD8K8LozjZCZ+BkZ/iO2hSt
+        aN0SBdFBgyzIbDiYInYEnLSwwXV0Ge3GX7EVOZcrjX+YQuELiVUduW94/B8AAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="kryptonCustomPaletteBase1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
