tipo pagamento | melhorias fvendas

--- a/Fontes/SisLoja/SisLoja/UI/fVendas.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fVendas.resx
@@ -184,7 +184,7 @@
   <data name="pbUnlock.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAddJREFUSEvNlUsvA1EUxwchJAgbgnrVTEm3PoCt6B1lMVsrKoj2jqbYTcMeIYQF
+        DAAACwwBP0AiyAAAAddJREFUSEvNlUsvA1EUxwchJAgbgnrVTEm3PoCt6B1lMVsrKoj2jqbYTcMeIYQF
         PgNdWVl4fQMhiKUPIBEhHv/bnkmm82inNOKXnLRz5pzfPb132kr/mrBm1NDb8qMwfUVh/ENR9VN5eL6R
         0uVBVvkqxF+WuCzbItnJ8+W5YPyifzTVQGU/A6K0Q2yN3yyCbVl0ldpCZvp5WJutpzZ/YFtSbjKvwDBn
         vheRGV92kxQNxjOk8EZsCz7ys6ugSKDvTdK0KlI5QVFSVvXrgXHepqh82y7wEWlSOYGYY/pbPBHtlBK5
@@ -195,22 +195,22 @@
         /ldI0jeeQV+Ib0kRMwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="img.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Img.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="nome.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Nome.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="qtd.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Qtd.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="precovenda.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Valor.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="acao.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Acao.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="acao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Acao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAAfZJREFUSEvdlLlOw0AQhiOuF4lDQcsD0AFS7HCI8Ai0WfMCKUm4KakJ17sQ0XGE
@@ -916,6 +916,6 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>62</value>
+    <value>47</value>
   </metadata>
 </root>
