Consultar Vendas. Closes #2

--- a/Fontes/SisLoja/SisLoja/UI/fConsultar.resx
+++ b/Fontes/SisLoja/SisLoja/UI/fConsultar.resx
@@ -163,4 +163,21 @@
         rkJggg==
 </value>
   </data>
+  <data name="kryptonButton1.Values.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAnZJREFUeF7tmrFqVFEQhg1pFG20SqWvoJWm0dZYCr6G+gRib+IrpA/kAWzVN1AU
+        LbXWJoKNsP7/mT+HbHbVOXvPznFhPhjOvTN3mH/+heWyyYUezGazHcQbxC+Eh0dqrTBnpX/CGa8RO2od
+        D8S8pLIGphhwyoFaxwMxR6bJTQ8DjtQ6HooxTW7SALVWmLOSmzRAreOhGNPkJg1Qa4U5K7nZaAMeq7WC
+        3FMrudloA94hLqqd/ZcQ71loYKMNIDThiaJ1ebLxBkwlDdD48VCMaQolDdD48VCMaQolDdD48VCMaQol
+        DdD48VCMaQolDdD48VCMaQolDdD48VCMaQolDdD48VCMaQolDdD48UDMoWkK5VDjxwMx9xA/i6wYOOuu
+        xv8fQNANxEMEf91dZ3DGdY1NkiSZDr5Uds98yfw11DIH8t7+B4jLalsAtSt6Zlnv+dhV2xxLnvtTWD8u
+        DhBuStM5kG55EfqAWDABOS7/kQ84WfoipJqXfTb8sGsfmjMH0q1vgntqrSDHT76FHgactDb0MmBtfx1W
+        zU0aoNON5syBdBpgVTdpgForzFnJzRgDwLZmVZA7tpKbHgYcq7WC3LaV/KxiwE3NK+B+C/G5VPz0MOAT
+        YkvtBdzfKpUGVjGA/6d7VQO5/HMmG+lhAHmGKCbgvIZ4y2QLqxhAviFeIVo/+VN6GUCogVq+l7tGVjVg
+        Kj0NmEQaoDOaNEB7V5izUixpgM5o0gDtXWHOSrGkATqjSQO0d4U5K8WSBuiMJg3Q3hXmrBRLGqAzmjRA
+        e1eYs1IsHPzVLkO5rb0ryN2xUihfOHiPF+V2/ZwgXmjnBVDb1zMRYOfZ/d+pBD5d1L6W7gAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
 </root>
